k8s/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    app.kubernetes.io/name: jenkins
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jenkins
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: jnlp
    port: 50000
    targetPort: 50000
